# phase-cmake

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md  release.md
.github/workflows/: build.yml  pull_request.yml  release.yml
include/: runphase.h
src/: main.cpp  runphase.cpp
